--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ is-disposable-email==1.0.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+Pillow==8.1.0
 pycparser==2.20
 six==1.15.0
 SQLAlchemy==1.3.23
